--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="shortcut icon" type="image/x-icon"  href="img/favicon/favicon1.ico">
-		<link href="https://fonts.googleapis.com/css?family=Bad+Script|Comfortaa|Lobster|Neucha|Press+Start+2P|Russo+One" rel="stylesheet">
+	<!-- 	<link href="https://fonts.googleapis.com/css?family=Bad+Script|Comfortaa|Lobster|Neucha|Press+Start+2P|Russo+One" rel="stylesheet"> -->
  		<link href='css/onepage-scroll.css' rel='stylesheet' type='text/css'>
  		<link rel="stylesheet" href="css/animate.css" />
  		<link rel="stylesheet" href="css/media.css">
