--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 			<div class="col2">
 				<p class= "footer_social">Профили в социальных сетях</p>
 				<p class= "footer_social_icon">
-					<a href=""><i class="fa fa-vk" aria-hidden="true"></i></a>
+					<a href="https://vk.com/kchipson"><i class="fa fa-vk" aria-hidden="true"></i></a>
 					<a href=""><i class="fa fa-google" aria-hidden="true"></i></a>
 					<a href=""><i class="fa fa-envelope" aria-hidden="true"></i></a>
 				</p>
