--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
  		<link href='css/onepage-scroll.css' rel='stylesheet' type='text/css'>
  		<link rel="stylesheet" href="css/animate.css" />
  		<link rel="stylesheet" href="css/media.css">
+ 		<!-- Скрипты -->
+ 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+		<script type="text/javascript" src="js/jquery.onepage-scroll.js"></script>
+		<script src="js/jquery.particleground.min.js"></script>
+		<script src="js/script.js"></script>
 	</head>
 
 <body>
@@ -103,16 +108,12 @@
 
 </div>
 </section>
-		<!-- СКРИПТЫ -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script>
 $(window).load(function() {
   $('#before-load').find('i').fadeOut().end().delay(400).fadeOut('slow');
 });
 </script>
-<script type="text/javascript" src="js/jquery.onepage-scroll.js"></script>
-<script src="js/jquery.particleground.min.js"></script>
-<script src="js/script.js"></script>
+
 
 		
 
